--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             </ul>
         </nav>
     </header>
+    <label for="" class="hamburger-menu">
+        <input type="checkbox">
+    </label>
+    <aside class="sidebar">
+        <nav>
+            <li><a href="index.html" class="hamburger">Home</a></li>
+            <li><a href="events.html" class="hamburger">Events</a></li>
+            <li><a href="explore.html" class="hamburger">Explore</a></li>
+            <li><a href="visit.html" class="hamburger">Visit</a></li> 
+        </nav>
+    </aside>
     <main>
         <section class="infocard-container">
             <div class="infocard">
