--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </ul>
         </nav>
     </header>
-    <label for="" class="hamburger-menu">
+
+    <label class="hamburger-menu">
         <input type="checkbox">
     </label>
     <aside class="sidebar">
@@ -32,6 +33,7 @@
             <li><a href="visit.html" class="hamburger">Visit</a></li> 
         </nav>
     </aside>
+
     <main>
         <section class="infocard-container">
             <div class="infocard">
