--- a/visit.html
+++ b/visit.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Museum | Visit</title>
 </head>
 <body>
@@ -20,6 +21,17 @@
             </ul>
         </nav>
     </header>
+    <label class="hamburger-menu">
+        <input type="checkbox">
+    </label>
+    <aside class="sidebar">
+        <nav>
+            <li><a href="index.html" class="hamburger">Home</a></li>
+            <li><a href="events.html" class="hamburger">Events</a></li>
+            <li><a href="explore.html" class="hamburger">Explore</a></li>
+            <li><a href="visit.html" class="hamburger">Visit</a></li> 
+        </nav>
+    </aside>
     <main>
         <section class="visitcard-container">
             <div class="visitcard">
