--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" class="nav">Home</a></li>
                 <li><a href="events.html" class="nav">Events</a></li>
                 <li><a href="explore.html" class="nav">Explore</a></li>
-                <li><a href="visit.html" class="nav">Visit</a></li>
+                <li><a href="getinvolved.html" class="nav">Get Involved</a></li>
             </ul>
         </nav>
     </header>
@@ -30,12 +30,16 @@
             <li><a href="index.html" class="hamburger">Home</a></li>
             <li><a href="events.html" class="hamburger">Events</a></li>
             <li><a href="explore.html" class="hamburger">Explore</a></li>
-            <li><a href="visit.html" class="hamburger">Visit</a></li> 
+            <li><a href="getinvolved.html" class="hamburger">Get Involved</a></li> 
         </nav>
     </aside>
 
     <main>
+        
         <section class="infocard-container">
+            <div class="index-image-container">
+                <img src="assets/Index_1.jpg" alt="picture of museum interior" id="index-image-1">
+            </div>
             <div class="infocard">
                 <p>
                     Come join us at the Community Science Museum where we’re committed to making science accessible to all.
