--- a/exhibitions.html
+++ b/exhibitions.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" class="nav">Home</a></li>
                 <li><a href="events.html" class="nav">Events</a></li>
                 <li><a href="explore.html" class="nav">Explore</a></li>
-                <li><a href="visit.html" class="nav">Visit</a></li>
+                <li><a href="getinvolved.html" class="nav">Get Involved</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
             <li><a href="index.html" class="hamburger">Home</a></li>
             <li><a href="events.html" class="hamburger">Events</a></li>
             <li><a href="explore.html" class="hamburger">Explore</a></li>
-            <li><a href="visit.html" class="hamburger">Visit</a></li> 
+            <li><a href="getinvolved.html" class="hamburger">Get Involved</a></li> 
         </nav>
     </aside>
     <main>
