--- a/events.html
+++ b/events.html
@@ -18,6 +18,7 @@
                 <li><a href="events.html" class="nav">Events</a></li>
                 <li><a href="explore.html" class="nav">Explore</a></li>
                 <li><a href="getinvolved.html" class="nav">Get Involved</a></li>
+                <li><a href="exhibitions.html" class="nav">Exhibitions</a></li>
             </ul>
         </nav>
     </header>
@@ -30,23 +31,27 @@
             <li><a href="events.html" class="hamburger">Events</a></li>
             <li><a href="explore.html" class="hamburger">Explore</a></li>
             <li><a href="getinvolved.html" class="hamburger">Get Involved</a></li> 
+            <li><a href="exhibitions.html" class="hamburger">Exhibitions</a></li> 
         </nav>
     </aside>
     <main>
         <section class="eventcard-container">
             <div class="eventcard">
+                <img src="assets/images/event_1.png" alt="astronaut in flightsuit" />
                 <h2>Visiting Professor of Aeronautics</h2>
                 <p>
                     It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
                 </p>
             </div>
             <div class="eventcard">
+                <img src="assets/images/event_2.png" alt="museum atrium at night" />
                 <h2>Night in the Museum</h2>
                 <p>
                     Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
                 </p>
             </div>
             <div class="eventcard">
+                <img src="assets/images/event_3.png" alt="scientist working on a reactor" />
                 <h2>Energetica Exhibition on Loan</h2>
                 <p>
                     On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
@@ -55,7 +60,31 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footerdiv">
+            <div class="sm-icons">
+                <img src="assets/images/Xlogo.png" alt="X logo">
+                <img src="assets/images/f_logo_RGB-Black_100.png" alt="facebook logo">
+            </div>
+            <hr class="footer-separation">
+            <div class="address">
+                <h3>Address</h3>
+                <p>Håkons gate 4, 9402 Harstad</p>
+            </div>
+            <hr class="footer-separation">
+            <div class="hours">
+                <h3>Opening hours</h3>
+                <ul>
+                    <li>Closed</li>
+                    <li>Tuesday: 10:00 – 16:00</li>
+                    <li>Wednesday: 10:00 – 16:00</li>
+                    <li>Thursday: 10:00 – 16:00</li>
+                    <li>Friday: 10:00 – 19:00</li>
+                    <li>Saturday: 9:00 – 16:00</li>
+                    <li>Sunday: 9:00 – 13:00</li>
+                </ul>
+            </div>
+
+        </div>
     </footer>
 </body>
 </html>
