--- a/getinvolved.html
+++ b/getinvolved.html
@@ -18,6 +18,7 @@
                 <li><a href="events.html" class="nav">Events</a></li>
                 <li><a href="explore.html" class="nav">Explore</a></li>
                 <li><a href="getinvolved.html" class="nav">Get Involved</a></li>
+                <li><a href="exhibitions.html" class="nav">Exhibitions</a></li>
             </ul>
         </nav>
     </header>
@@ -30,44 +31,68 @@
             <li><a href="events.html" class="hamburger">Events</a></li>
             <li><a href="explore.html" class="hamburger">Explore</a></li>
             <li><a href="getinvolved.html" class="hamburger">Get Involved</a></li> 
+            <li><a href="exhibitions.html" class="hamburger">Exhibitions</a></li> 
         </nav>
     </aside>
     <main>
         <section class="involved-container">
             <div class="involved-card">
-               <div class="involved-img">
-                    <img src="assets/images/involved_1.png" alt="" id="involved-img-1" />
-               </div>
-               <div class="involved-text">
+                <img src="assets/images/involved_1.png" alt="" id="involved-img-1" />
+               
+
                     <h2>Support</h2>
                     <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. </p>
                     <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.</p>
-               </div> 
+
             </div>
             <div class="involved-card">
-                <div class="involved-img">
+
                     <img src="assets/images/involved_2.png" alt="" />
-                </div>
-                <div class="involved-text">
+
+
                     <h2>Volunteer</h2>
                     <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.</p>
                     <p>You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
-                </div> 
+ 
              </div>
              <div class="involved-card">
-                <div class="involved-img">
+
                     <img src="assets/images/involved_3.png" alt="" />
-                </div>
-                <div class="involved-text">
+
+
                     <h2>Internships</h2>
                     <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
                     <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
-                </div> 
+
              </div>
         </section>
     </main>
     <footer>
-        
+        <div class="footerdiv">
+            <div class="sm-icons">
+                <img src="assets/images/Xlogo.png" alt="X logo">
+                <img src="assets/images/f_logo_RGB-Black_100.png" alt="facebook logo">
+            </div>
+            <hr class="footer-separation">
+            <div class="address">
+                <h3>Address</h3>
+                <p>Håkons gate 4, 9402 Harstad</p>
+            </div>
+            <hr class="footer-separation">
+            <div class="hours">
+                <h3>Opening hours</h3>
+                <ul>
+                    <li>Closed</li>
+                    <li>Tuesday: 10:00 – 16:00</li>
+                    <li>Wednesday: 10:00 – 16:00</li>
+                    <li>Thursday: 10:00 – 16:00</li>
+                    <li>Friday: 10:00 – 19:00</li>
+                    <li>Saturday: 9:00 – 16:00</li>
+                    <li>Sunday: 9:00 – 13:00</li>
+                </ul>
+            </div>
+
+        </div>
     </footer>
 </body>
 </html>
