--- a/explore.html
+++ b/explore.html
@@ -18,6 +18,7 @@
                 <li><a href="events.html" class="nav">Events</a></li>
                 <li><a href="explore.html" class="nav">Explore</a></li>
                 <li><a href="getinvolved.html" class="nav">Get Involved</a></li>
+                <li><a href="exhibitions.html" class="nav">Exhibitions</a></li>
             </ul>
         </nav>
     </header>
@@ -30,11 +31,13 @@
             <li><a href="events.html" class="hamburger">Events</a></li>
             <li><a href="explore.html" class="hamburger">Explore</a></li>
             <li><a href="getinvolved.html" class="hamburger">Get Involved</a></li> 
+            <li><a href="exhibitions.html" class="hamburger">Exhibitions</a></li> 
         </nav>
     </aside>
     <main>
         <section class="explorecard-container">
             <div class="explorecard">
+                <img src="assets/images/explore_1.png" alt="picture of museum interior" id="index-image-1">
                 <h2>For kids</h2>
                 <p>
                     Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
@@ -45,6 +48,7 @@
                 </p>
             </div>
             <div class="explorecard">
+                <img src="assets/images/explore_2.png" alt="picture of museum interior" id="index-image-1">
                 <h2>For Teachers</h2>
                 <p>
                     As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
@@ -53,6 +57,7 @@
                 </p>
             </div>
             <div class="explorecard">
+                <img src="assets/images/explore_3.png" alt="picture of museum interior" id="index-image-1">
                 <h2>Researchers</h2>
                 <p>
                     Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.
@@ -61,7 +66,31 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footerdiv">
+            <div class="sm-icons">
+                <img src="assets/images/Xlogo.png" alt="X logo">
+                <img src="assets/images/f_logo_RGB-Black_100.png" alt="facebook logo">
+            </div>
+            <hr class="footer-separation">
+            <div class="address">
+                <h3>Address</h3>
+                <p>Håkons gate 4, 9402 Harstad</p>
+            </div>
+            <hr class="footer-separation">
+            <div class="hours">
+                <h3>Opening hours</h3>
+                <ul>
+                    <li>Closed</li>
+                    <li>Tuesday: 10:00 – 16:00</li>
+                    <li>Wednesday: 10:00 – 16:00</li>
+                    <li>Thursday: 10:00 – 16:00</li>
+                    <li>Friday: 10:00 – 19:00</li>
+                    <li>Saturday: 9:00 – 16:00</li>
+                    <li>Sunday: 9:00 – 13:00</li>
+                </ul>
+            </div>
+
+        </div>
     </footer>
 </body>
 </html>
