alt text and description

--- a/explore.html
+++ b/explore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="welcome to the community science museum, where both young and old can learn about the science of the universe">
+    <meta name="description" content="Explore what fun we can offer for all ages and groups">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
     <main>
         <section class="explorecard-container">
             <div class="explorecard">
-                <img src="assets/images/explore_1.png" alt="picture of museum interior" id="index-image-1">
+                <img src="assets/images/explore_1.png" alt="picture of kids puzzle" id="index-image-1">
                 <h2>For kids</h2>
                 <p>
                     Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
@@ -48,7 +48,7 @@
                 </p>
             </div>
             <div class="explorecard">
-                <img src="assets/images/explore_2.png" alt="picture of museum interior" id="index-image-1">
+                <img src="assets/images/explore_2.png" alt="picture of a kid looking at a blackboard" id="index-image-1">
                 <h2>For Teachers</h2>
                 <p>
                     As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="explorecard">
-                <img src="assets/images/explore_3.png" alt="picture of museum interior" id="index-image-1">
+                <img src="assets/images/explore_3.png" alt="Picture of a model seethrough skull" id="index-image-1">
                 <h2>Researchers</h2>
                 <p>
                     Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.
