--- a/getinvolved.html
+++ b/getinvolved.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="welcome to the community science museum, where both young and old can learn about the science of the universe">
+    <meta name="description" content="Get involved with the community science museum">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
     <main>
         <section class="involved-container">
             <div class="involved-card">
-                <img src="assets/images/involved_1.png" alt="" id="involved-img-1" />
+                <img src="assets/images/involved_1.png" alt="picture of a child reading" id="involved-img-1" />
                
 
                     <h2>Support</h2>
@@ -47,7 +47,7 @@
             </div>
             <div class="involved-card">
 
-                    <img src="assets/images/involved_2.png" alt="" />
+                    <img src="assets/images/involved_2.png" alt="someone painting while wearing a VR headset" />
 
 
                     <h2>Volunteer</h2>
@@ -57,7 +57,7 @@
              </div>
              <div class="involved-card">
 
-                    <img src="assets/images/involved_3.png" alt="" />
+                    <img src="assets/images/involved_3.png" alt="scientist looking through a microscope" />
 
 
                     <h2>Internships</h2>
